...
                            }
                        }
                    }
                },
                floatingActionButton = {
                    if (appUiStateVal.expandableFabState.visible) {
                        ExpandableFab(
                            state = appUiStateVal.expandableFabState,
                            onToggle = {
                                appUiStateVal = appUiStateVal.copy(
                                    expandableFabState = appUiStateVal.expandableFabState.copy(
                                        expanded = !appUiStateVal.expandableFabState.expanded
                                    )
...
                                )
                            }
                        )
                    }
                    else if (appUiStateVal.fabState.visible) {
                        ExtendedFloatingActionButton(
                            modifier = Modifier.testTag("floating_action_button"),
                            onClick = appUiStateVal.fabState.onClick,
                            text = {
                                Text(
                                    modifier = Modifier.testTag("floating_action_button_text"),
                                    text = appUiStateVal.fabState.text?.let {
                                        uiTextStringResource(it)
...
