...
        TopAppBar(
            title = {
                Text(
                    text = appUiState.title?.let { uiTextStringResource(it) } ?: "",
                    maxLines = 1,
                    overflow = TextOverflow.Ellipsis,
                    modifier = Modifier.testTag("app_title"),
                )

                Text(
                    modifier = Modifier.testTag("pending_write_count")
                        .alpha(0f),
                    text = pendingWriteCount.toString(),
...
                    }
                }
                if(showUserAccountIcon) {
                    activeAccount?.also {
                        IconButton(
                            onClick = onProfileClick,
                            modifier = Modifier.testTag("user_account_icon"),
                        ) {
                            RespectPersonAvatar(name = it.person.fullName())
                        }
                    }
                }

...
