appId: world.respect.app
onFlowStart:
  - clearState: world.respect.app
  - runScript:
      file: "scripts/school_init.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
        SCHOOL_ADMIN_PASSWORD: ${SCHOOL_ADMIN_PASSWORD}
        DIR_ADMIN_AUTH_HEADER: ${DIR_ADMIN_AUTH_HEADER}
        SCHOOL_URL: ${SCHOOL_URL}
        SCHOOL_NAME: ${SCHOOL_NAME}
        URL_SUBSTITUTION: ${URL_SUBSTITUTION}
        NAME: "001_001b_invite_existing_users_using_invite_code_or_link_test"

onFlowComplete:
  - runScript:
      file: "scripts/teardown.js"

---
#Admin add a users to the app and add a class named - TestClass
- runFlow: "subflows/school_admin_login_flow.yaml"

- assertVisible:
    id: "app_title"
    text: "Apps"
- runFlow:
    file: "subflows/user_add_class.yaml"
    env:
      CLASSNAME: "TestClass"

- runFlow:
    file: "subflows/add_person_to_app.yaml"
    env:
      FIRSTNAME: "ParentA"
      LASTNAME: "User"
      GENDER: "Female"
      ROLE: "Parent"
      USERNAME: "parentauser"
      PASSWORD: "test123"

- runFlow:
    file: "subflows/add_person_to_app.yaml"
    env:
      FIRSTNAME: "StudentA"
      LASTNAME: "User"
      GENDER: "Female"
      ROLE: "Student"
      USERNAME: "studentauser"
      PASSWORD: "test123"

- runFlow:
    file: "subflows/add_person_to_app.yaml"
    env:
      FIRSTNAME: "StudentB"
      LASTNAME: "User"
      GENDER: "Male"
      ROLE: "Student"
      USERNAME: "studentbuser"
      PASSWORD: "test123"

- runFlow:
    file: "subflows/add_person_to_app.yaml"
    env:
      FIRSTNAME: "TeacherA"
      LASTNAME: "User"
      GENDER: "Female"
      ROLE: "Teacher"
      USERNAME: "teacherauser"
      PASSWORD: "test123"

- tapOn: "Classes"
- tapOn: "TestClass"
- assertVisible:
    id: "app_title"
    text: "TestClass"
- tapOn: "Add Teacher"
- tapOn: "Invite person"
- assertVisible:
    id: "app_title"
    text: "Invite person"
- assertVisible: "Approval required"    #switch is On
- assertVisible: "Copy link"
- assertVisible: "Send link via SMS"
- assertVisible: "Send link via Email"
- assertVisible: "Share link"
- runFlow:
    when:
      notVisible: "Approval not required until:.*"
    commands:
      - tapOn: "Approval required" # turn the switch off
      - assertVisible: "Approval not required until:.*"
- scroll
- assertVisible: "Reset code"
- copyTextFrom:
    id: "invite_url"

# Teacher sign-up via invite link to the class as already logged-in user
- clearState: world.respect.app
- runFlow:
    file: "subflows/school_user_login_flow.yaml"
    env:
      USERNAME: "teacherauser"
      PASSWORD: "test123"
- assertVisible:
    id: "app_title"
    text: "Apps"

- launchApp:
    appId: "world.respect.app"
    arguments:
      launchUrl: ${maestro.copiedText}

- assertVisible:
    id: "app_title"
    text: "Select account to continue"
- assertVisible: "TeacherA User"
- assertVisible: ${output.SCHOOL_URL}
- tapOn: "TeacherA User"
- assertVisible:
    id: "app_title"
    text: "Invitation"
- assertVisible: "Class name"
- assertVisible: "TestClass"
- assertVisible: "Role"
- assertVisible: "Teacher"
- assertVisible: "School name"
- assertVisible: ${output.SCHOOL_NAME}
- assertVisible: "School server URL"
- assertVisible: ${output.SCHOOL_URL}
- tapOn: "Accept invite"
- assertVisible:
    id: "app_title"
    text: "TestClass"
- assertVisible: "TeacherA User"

# Add StudentA User as family member of Parent A
- tapOn: "People"
- tapOn: "ParentA User"
- tapOn:
    id: "floating_action_button"   # Edit button
- assertVisible:
    id: "app_title"
    text: "Edit person"
- tapOn: "Family member"
- assertVisible: "StudentB User"
- tapOn: "StudentA User"
- tapOn: "Save"
- assertVisible: "StudentA User"
- assertVisible:
    id: "app_title"
    text: "ParentA User"

# Teacher send Family member invite to StudentB user to join ParentA User
- tapOn:
    id: "floating_action_button"
- assertVisible:
    id: "app_title"
    text: "Edit person"
- tapOn: "Family member"
- tapOn: "Invite person"
- assertVisible: "ParentA User / Family member"
- assertVisible: "Approval not required until:.*"
- runFlow:
    when:
      notVisible: "Approval not required until:.*"
    commands:
      - tapOn: "Approval required" # turn the switch off
      - assertVisible: "Approval not required until:.*"
- copyTextFrom:
    id: "invite_url"

#StudentB user using link to join the family member (ParentA user)
- clearState: world.respect.app
- launchApp:
    arguments:
      respect_directory: ${output.SCHOOL_URL}
- tapOn: "Get Started"
- tapOn: "Scan QR code/badge"
- assertVisible:
    id: "app_title"
    text: "Scan QR code badge"
- tapOn: "More Options"
- tapOn: "Paste URL"
- tapOn: "Url"
- pasteText
- tapOn: "OK"
- assertVisible:
    id: "app_title"
    text: "Login"
- tapOn: "Username"
- inputText: "studentbuser"
- tapOn: "Password"
- inputText: "test123"
- tapOn: "Login"
- runFlow:
    when:
      visible: "Save password for Respect?"
    file: "subflows/save_password_prompt_cancel.yaml"
- assertVisible:
    id: "app_title"
    text: "Invitation"
- assertVisible: "Role"
- assertVisible: "Student"
- assertVisible: "Family member"
- assertVisible: "ParentA User"
- assertVisible: "School name"
- assertVisible: ${output.SCHOOL_NAME}
- assertVisible: "School server URL"
- assertVisible: ${output.SCHOOL_URL}
- tapOn: "Accept Invite"
- tapOn: "People"
- tapOn: "ParentA User"
- assertVisible:
    id: "app_title"
    text: "ParentA User"
- assertVisible: "Family members"
- assertVisible: "StudentB User"

#Teacher send class invite to parentA user to add StudentA User
- clearState: world.respect.app
- runFlow:
    file: "subflows/school_user_login_flow.yaml"
    env:
      USERNAME: "teacherauser"
      PASSWORD: "test123"
- tapOn: "Classes"
- tapOn: "TestClass"
- assertVisible:
    id: "app_title"
    text: "TestClass"
- tapOn: "Add Student"
- tapOn: "Invite person"
- assertVisible:
    id: "app_title"
    text: "Invite person"
- runFlow:
    when:
      visible: "Approval not required until:.*"
    commands:
      - tapOn: "Approval required" # turn the switch ON
      - assertNotVisible: "Approval not required until:.*"
- tapOn: "Invite via parents"
- scroll
- assertVisible: "Reset code"
- copyTextFrom:
    id: "invite_url"

# Parent user use the link to add StudentA User to class
- runFlow:
    file: "subflows/openlink_flow.yaml"
    env:
      URL: ${maestro.copiedText}
- assertVisible:
    id: "app_title"
    text: "Login"
- tapOn: "Username"
- inputText: "parentauser"
- tapOn: "Password"
- inputText: "test123"
- tapOn: "Login"
- runFlow:
    when:
      visible: "Save password for Respect?"
    file: "subflows/save_password_prompt_cancel.yaml"
- assertVisible:
    id: "app_title"
    text: "Invitation"
- tapOn: "Select Child"
- assertVisible: "StudentA User"
- assertVisible: "StudentB User"
- tapOn: "StudentA User"
- assertVisible: "Class name"
- assertVisible: "TestClass"
- assertVisible: "Role"
- assertVisible: "Student"
- assertVisible: "School name"
- assertVisible: ${output.SCHOOL_NAME}
- assertVisible: "School server URL"
- assertVisible: ${output.SCHOOL_URL}
- tapOn: "Accept Invite"
- swipe:
    start: 50%, 20%
    end: 50%, 80%
- assertVisible:
    id: "app_title"
    text: "Accounts"
- assertVisible: "ParentA User"
- assertVisible: "Pending requests"
- assertVisible: "StudentA User: TestClass(STUDENT)"
- assertVisible: "Pending requests"
- assertVisible: "Family members"
- assertVisible: "StudentA User"
- assertVisible: "StudentB User"

#Teacher send class invite to StudentB User directly
- clearState: world.respect.app
- runFlow:
    file: "subflows/school_user_login_flow.yaml"
    env:
      USERNAME: "teacherauser"
      PASSWORD: "test123"
- tapOn: "Classes"
- tapOn: "TestClass"
- assertVisible:
    id: "app_title"
    text: "TestClass"
- tapOn: "Add Student"
- tapOn: "Invite person"
- assertVisible:
    id: "app_title"
    text: "Invite person"
- runFlow:
    when:
      visible: "Approval not required until:.*"
    commands:
      - tapOn: "Approval required" # turn the switch ON
      - assertNotVisible: "Approval not required until:.*"
- tapOn: "Invite students directly"
- scroll
- assertVisible: "Reset code"
- copyTextFrom:
    id: "invite_url"

# StudentB user joining class using invite QR code
- clearState: world.respect.app
- launchApp:
    arguments:
      respect_directory: ${output.SCHOOL_URL}
- tapOn: "Get Started"
- tapOn: "Scan QR code/badge"
- assertVisible:
    id: "app_title"
    text: "Scan QR code badge"
- tapOn: "More Options"
- tapOn: "Paste URL"
- tapOn: "Url"
- pasteText
- tapOn: "OK"
- assertVisible:
    id: "app_title"
    text: "Login"
- tapOn: "Username"
- inputText: "studentbuser"
- tapOn: "Password"
- inputText: "test123"
- tapOn: "Login"
- runFlow:
    when:
      visible: "Save password for Respect?"
    file: "subflows/save_password_prompt_cancel.yaml"
- assertVisible:
    id: "app_title"
    text: "Invitation"
- assertVisible: "Class name"
- assertVisible: "TestClass"
- assertVisible: "Role"
- assertVisible: "Student"
- assertVisible: "School name"
- assertVisible: ${output.SCHOOL_NAME}
- assertVisible: "School server URL"
- assertVisible: ${output.SCHOOL_URL}
- tapOn: "Accept invite"
- assertVisible:
    id: "app_title"
    text: "Accounts"
- assertVisible: "ParentA User"
- assertVisible: "Family members"
- assertVisible: 'StudentB User'
#- assertVisible: "StudentA User"
#- assertVisible: "Pending requests"
#- assertVisible: "StudentA User: TestClass (Student)"
#- assertVisible: ".*Pending approval"

# Teacher approve student's request to join the class
- clearState: world.respect.app
- runFlow:
    file: "subflows/school_user_login_flow.yaml"
    env:
      USERNAME: "teacherauser"
      PASSWORD: "test123"
- assertVisible: "Apps"
- tapOn: "Classes"
- assertVisible:
    id: "app_title"
    text: "Classes"
- tapOn: "TestClass"
- assertVisible: "Pending requests.*"
- assertVisible: "StudentA User.*"
- tapOn: "Accept Invite"
- assertVisible: "StudentB User.*"
- tapOn: "Accept Invite"
- assertNotVisible: "Pending requests.*"
- assertVisible: "StudentA User"
- assertVisible: "StudentB User"

# Teacher uses invite code to join class for Students and gets error
- tapOn: "Add Student"
- tapOn: "Invite person"
- copyTextFrom:
    id: "invite_code"
- back
- back
- tapOn:
    id: "user_account_icon"
- assertVisible:
    id: "app_title"
    text: "Accounts"
- tapOn: "Enter invite code"
- assertVisible:
    id: "app_title"
    text: "Enter invite code"
- tapOn: "Invite code"
- inputText: ${maestro.copiedText}
- tapOn: "Next"
- assertVisible:
    id: "app_title"
    text: "Invitation"
- tapOn: "Accept Invite"
- assertVisible: "Sorry. Invalid invitation: not available for your user type."


